...
    
    // MARK: - view property
    
    var body: some View {
        NavigationStack {
            createMainView()
                .navigationTitle("Diary List")
                .navigationBarTitleDisplayMode(.inline)
        }
    }
}

// MARK: - private extension
...
        .padding(.horizontal, controlSectionPaddingHorizontal)
    }
    
    func createFilterButton(_ action: @escaping () -> Void) -> some View {
        Button(action: action){
            HStack {
                Text("filter")
                    .font(.system(size: filterButtonFontSize, weight: .regular))
                    .foregroundStyle(.white)
                Image(systemName: "arrowtriangle.down.fill")
                    .foregroundStyle(Color.white)
                    .font(.system(size: filterIconSize))
            }
...
