...

private extension DiaryListFilterView {
    
    func createDialogView() -> some View {
        ZStack(alignment: .topTrailing) {
            VStack(spacing: .zero) { // ダイアログエリア
                Text("日記リストのフィルター設定")
                    .font(.system(size: dialogTitleFontSize,
                                  weight: .bold))
                Spacer()
                    .frame(height: dialogTitlePaddingBottom)
                createScrollArea()
            }
...
            guard let selectCase else {
                store.send(.tappedFilterTypeDeleteButton(target: target))
                return
            }
            store.send(.tappedFilterItemDeleteButton(filter: selectCase))
        }, label: {
            Image(systemName: "minus.circle.fill")
                .resizable()
                .frame(width: iconSize.width,
                       height: iconSize.height)
                .foregroundStyle(Color(asset: CustomColor.deleteSwipeBackgroundColor))
        })
    }
...
