...
    var body: some View {
        Button(action: {
            store.send(.tappedDiaryItem)
        }, label: {
            createDiaryItemContent()
        })
        .accessibilityLabel("日記項目ボタン")
        .foregroundStyle(Color(asset: CustomColor.appPrimaryTextColor))
        .background(Color(asset: CustomColor.appPrimaryBackgroundColor))
        .addSwipeAction {
            SwipeAction(tint: Color(asset: CustomColor.deleteSwipeBackgroundColor),
                        icon: Image(systemName: "trash.fill")) {
                store.send(.deleteItemSwipeAction)
...
