...
                    store.send(.tappedEditButton)
                }
            }
        }
        .navigationBarBackButtonHidden()
        .navigationBarTitleDisplayMode(.inline)
        .navigationTitle("Detail")
        .navigationDestination(
            item: $store.scope(
                state: \.navigationDestination?.editDiary,
                action: \.navigationDestination.editDiary
            )
        ) {
...
