...
            }
        }
        .scrollIndicators(.hidden)
    }
    
    func createEmptyListView() -> some View {
        Text("表示する日記がありません")
            .frame(maxWidth: .infinity, maxHeight: .infinity)
            .padding(.horizontal, emptyMessagePaddingHorizontal)
            .font(.system(size: emptyMessageFontSize, weight: .bold))
            .foregroundStyle(Color(asset: CustomColor.appPrimaryTextColor))
            .multilineTextAlignment(.center)
    }
...
